Register Bug: errors were not showing

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,3 +151,12 @@ main{
     width: fit-content;
     width: -moz-fit-content;
 }
+
+.w-56r{
+    width: 56rem;
+}
+
+.tab-content{
+    height: 100%;
+    width: 100%;
+}
